--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.3",
     "mongodb": "^2.2.33",
     "mongojs": "^2.6.0",
-    "mongoose": "^5.2.7"
+    "mongoose": "^5.2.7",
+    "nodemon": "^1.18.3"
   }
 }
