--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Hakimkhamis/city-events#readme",
   "dependencies": {
     "angular-carousel": "^1.1.0",
+    "angular-popeye": "^1.0.5",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongodb": "^2.2.33",
